Revised text sizes. New atk-button-outline.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -294,12 +294,15 @@ ul[class*=atk-menu] {
         padding: @margin;
         margin-bottom: @margin;
         &.atk-box-xsmall {
-            padding: @margin/3;
-        }
-        &.atk-box-small {
             padding: @margin/2;
         }
+        &.atk-box-small {
+            padding: @margin/1.5;
+        }
         &.atk-box-large {
+            padding: @margin*1.5;
+        }
+        &.atk-box-xlarge {
             padding: @margin*2;
         }
         &:last-child {
@@ -640,57 +643,59 @@ ul[class*=atk-menu] {
 
 // Shapes
 .atk-shape-rectangle {
-    border-radius: 0;
+    &, input& {
+        border-radius: 0;
+    }
 }
 .atk-shape-rounded {
-    &, img& {
+    &, img&, input&  {
         .border-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-top {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-top-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-bottom {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-bottom-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-left {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-left-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-right {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-right-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-top-left {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-top-left-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-top-right {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-top-right-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-bottom-left {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-bottom-left-radius(@cornerRadius);
     }
 }
 .atk-shape-rounded-bottom-right {
-     &, img& {
+     &, img&, input&  {
         .border-radius(0);
         .border-bottom-right-radius(@cornerRadius);
     }
@@ -772,7 +777,7 @@ ul[class*=atk-menu] {
         }
         .atk-text-dimmed {
             .colorCheck(@@color);
-            .opacity(50);
+            .opacity(0.5);
         }
         &[class*=icon-] {
             &, a& {
@@ -808,6 +813,14 @@ ul[class*=atk-menu] {
             .box-shadow(@buttonShadow);
             &:hover {
                 border-color: darken(@@color, 10%);
+            }
+            &.atk-button-outline {
+                background: fade(@@color, 0%);
+                border-color: @@color;
+                color: @@color;
+                &:hover {
+                    background: fade(@@color, 20%);
+                }
             }
         }
         *[class*=atk-menu]>li.atk-menu-separated:not(:first-child)>a& {
@@ -867,28 +880,36 @@ ul[class*=atk-menu] {
             // color: contrast(@color, black, white, 50%);
             background-color: @color;
             border-color: @color;
-            color: multiply(@effectDanger, #999);
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectDanger, #999);
+            }
         }
         &.atk-effect-warning {
             // .colorCheck(@color);
             @color: tint(@effectWarning, 90%);
             background-color: @color;
             border-color: @color;
-            color: multiply(@effectWarning, #999);
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectWarning, #999);
+            }
         }
         &.atk-effect-success {
             // .colorCheck(@color);
             @color: tint(@effectSuccess, 90%);
             background: @color;
             border-color: @color;
-            color: multiply(@effectSuccess, #999);
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectSuccess, #999);
+            }
         }
         &.atk-effect-info {
             // .colorCheck(@color);
             @color: tint(@effectInfo, 90%);
             background-color: @color;
             border-color: @color;
-            color: multiply(@effectInfo, #999);
+            &, h1, h2, h3, h4, h5, h6 {
+                color: multiply(@effectInfo, #999);
+            }
         }
     }
     &.atk-effect-danger {
