--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -28,6 +28,9 @@ body {
 .atk-background-cover {
   .background-cover(inherit);
 }
+.atk-background-fixed {
+  .background-fixed;
+}
 
 *[class*=atk-box], .ui-tabs *[class*=atk-box].ui-tabs-panel.ui-widget-content, *[class*=atk-swatch] hr, hr {
   &.atk-border-static {
