--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -37,38 +37,38 @@ h1, h2, h3, h4, h5, h6 {
         margin-top: @margin;
     }
 }
-.atk-size-pow10 {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*10);
+.atk-size-yotta4 {
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*5.5);
 }
-.atk-size-pow9 {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*9);
-}
-.atk-size-pow8 {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*8);
-}
-.atk-size-yotta {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*7);
-}
-.atk-size-zetta {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*6);
-}
-h1, .atk-size-exa {
+.atk-size-yotta3 {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*5);
 }
-.atk-size-peta {
+.atk-size-yotta2 {
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*4.5);
+}
+.atk-size-yotta {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*4);
 }
-h2, .atk-size-tera {
+.atk-size-zetta {
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*3.5);
+}
+h1, .atk-size-exa {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*3);
 }
-.atk-size-giga {
+.atk-size-peta {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*2.5);
 }
-h3, .atk-size-mega {
+h2, .atk-size-tera {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*2);
 }
-h4, .atk-size-kilo {
+.atk-size-giga {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*1.5);
+}
+h3, .atk-size-mega {
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*1);
+}
+h4, .atk-size-kilo {
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*0.5);
 }
 h5, .atk-size-default, .atk-size-reset {
     font-size: @bodySize;
@@ -80,7 +80,7 @@ h6, small, .atk-size-milli {
     font-size: @bodySize * pow(@bodyBaseline,@fontScatter*-1);
 }
 .atk-size-nano {
-    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*-2);
+    font-size: @bodySize * pow(@bodyBaseline,@fontScatter*-1.5);
 }
 
 
