--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -14,7 +14,7 @@ html, body, .atk-layout  {
 	}
 	>.atk-layout-row {
 		display: table-row;
-		height: 1px;
+		height: 0.1em;
 		&.atk-layout-fluid, &.atk-layout-expand {
 			height: auto;
 		}
@@ -23,7 +23,7 @@ html, body, .atk-layout  {
 		display: table-cell;
 		height: auto;
 		vertical-align: top;
-		width: 1px;
+		width: 0.1em;
 		&.atk-layout-fluid, &.atk-layout-expand {
 			width: auto;
 		}
