--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -304,8 +304,10 @@
 // Backgrounds
 // ==========================================================
 
-.background-cover(@src) {
+.background-fixed {
   background-attachment:fixed;
+}
+.background-cover(@src) {
   background-image: url(@src);
   background-position: center center;
   background-repeat: no-repeat;
