--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -851,6 +851,9 @@ ul[class*=atk-menu] {
         background-color: @@color;
         border-color: @@color;
     }
+    .@{color}-fill {
+        background-color: @@color;
+    }
     .@{color}-text {
         color: @@color;
     }
