--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -142,7 +142,7 @@ h6, small, .atk-size-milli {
     line-height: @bodyBaseline;
 }
 .atk-text-ellipsis {
-    display: inline-block;
+    display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
