--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -705,6 +705,16 @@ ul[class*=atk-menu] {
         .border-radius(50%);
     }
 }
+*[class*=atk-shape-outline] {
+    &, &[class*=atk-swatch]:not(.atk-text-inherit) {
+        background: none;
+        border-width: 0.1em;
+        border-style: solid;
+        &.atk-shape-outline-thick {
+            border-width: 0.2em;
+        }
+    }
+}
 
 
 // ==========================================================
@@ -778,6 +788,10 @@ ul[class*=atk-menu] {
         .atk-text-dimmed {
             .colorCheck(@@color);
             .opacity(0.5);
+        }
+        &[class*=atk-shape-outline] {
+            border-color: @@color;
+            color: @@color;
         }
         &[class*=icon-] {
             &, a& {
