--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -33,6 +33,9 @@ body {
 }
 
 *[class*=atk-box], .ui-tabs *[class*=atk-box].ui-tabs-panel.ui-widget-content, *[class*=atk-swatch] hr, hr {
+  &.atk-border-disabled {
+    border-color: @borderDisabled;
+  }
   &.atk-border-static {
     border-color: @borderStatic;
   }
