--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -36,6 +36,7 @@
 
 @blur:                 5px; // Effect .atk-blur can be applied on any element.
 
+@borderDisabled:       lighten(@borderStatic, 10%);
 @borderStatic:         #dcdee0;
 @borderClickable:      darken(@borderStatic, 10%);
 @borderOverlay:        darken(@borderStatic, 25%);
@@ -48,6 +49,7 @@
 // @atk-swatch-red:	   #f9451f;		.createSwatch(atk-swatch-red);
 // @atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
 // @atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
+
 @swatchText:           50%; // Text color sensitivity based on swatch
 
 @effectSuccess:        #25c425;
