Clean up in agiletoolkit.less; .atk-border-outline is now equal to .atk-button-outline.

--- a/framework/less/agiletoolkit.less
+++ b/framework/less/agiletoolkit.less
@@ -1,17 +1,17 @@
 
 /**
- * Agile Toolkit CSS Framework (c) 2013-2014 v0.915
+ * Agile CSS Framework (c) 2013–2015 v0.916
  *  http://www4.agiletoolkit.org/css
  */
 
-// Third Party Libraries
+// jQueryUI integration
 @import '../css/libs/jquery-ui/jquery-ui-1.10.3.custom.min.less'; /* jQueryUI Library */
 @import '../css/libs/jquery-ui/jquery.ui.selectmenu.less'; /* jQueryUI Select Menu Plugin */
 @import '../css/libs/jquery-ui/jui-variables.less'; /* jQueryUI parameters transformed to less variables. */
-
-// Agile Toolkit
-@import 'normalize.less'; /* Renders elements more consistently and in line with modern standards. */
 @import 'jqueryui.less';
+
+// Structure
+@import 'normalize.less'; /* Renders elements more consistently and in line with modern standards. */
 @import 'mixins.less';
 @import 'layouts.less';
 @import 'typography.less';
